# trabalho-02-cecilia-guiss

./: .gitignore  README.md  docker-compose.yml
relatorio/: Makefile  apresentacao.tex  relatorio.tex
workspace/: Makefile  sl.cabal  test.sl  test_error.sl
workspace/src/: ASTtoTree.hs  ClosureConverter.hs  Infer.hs  Interpreter.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  SLToken.hs  TypeChecker.hs  TypeChecker_helper.txt  Types.hs
workspace/test/: closure_complex.sl  ex1.sl  ex10.sl  ex11.sl  ex2.sl  ex3.sl  ex4.sl  ex5.sl  ex6.sl  ex7.sl  ex8.sl  ex9.sl  fail_scope.sl  fail_type.sl
