name:                sl
version:             0.1.0.0
synopsis:            Compiler for SL language
author:              Author
maintainer:          author@example.com
build-type:          Simple
cabal-version:       >=1.10

executable sl
  main-is:             Main.hs
  other-modules:       Lexer, SLToken, Pretty, Parser, ASTtoTree, Types, TypeChecker, Interpreter, ClosureConverter
  build-depends:       base >=4.12 && <5,
                     array,
                     containers,
                     pretty,
                     prettyprinter,
                     prettyprinter-ansi-terminal,
                     parser-combinators,
                     megaparsec,
                     mtl,
                     text
  hs-source-dirs:      src
  default-language:    Haskell2010
